--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,15 @@
   <title>Moyincollections</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Icons -->
+  <link
+  href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+  rel="stylesheet"
+/>
 </head>
 <body>
   <app-root></app-root>
