--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta
+    name="description"
+    content="Khingdave is a tech enthusiast and passionate Frontend web developer."
+  />
+  <meta
+    name="keywords"
+    content="frontend developer, Web developer, Websites, Web Design"
+  />
   <title>Moyincollections</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,6 +22,21 @@
   href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
   rel="stylesheet"
 />
+
+<meta name="twitter:card" content="summary" />
+<meta property="og:title" content="Moheen Collections" />
+<meta
+  property="og:description"
+  content="Moheen Collections summary"
+/>
+<!-- <meta
+  property="og:image"
+  content="https://res.cloudinary.com/djnqxvljr/image/upload/v1637677041/perlfood/photo1637676682_q5hkpp.jpg"
+/> -->
+<!-- <meta
+  name="twitter:image"
+  content="https://res.cloudinary.com/djnqxvljr/image/upload/v1637677041/perlfood/photo1637676682_q5hkpp.jpg"
+/> -->
 </head>
 <body>
   <app-root></app-root>
